--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-sass": "^2.2.0",
+    "gulp-tslint": "^4.3.3",
     "lite-server": "^2.1.0",
+    "tslint": "^3.5.0",
     "typescript": "^1.7.5",
     "typings": "^0.6.8"
   }
