--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "webcalconnectfrontend",
-  "version": "2.0.0",
-  "scripts": {
-    "postinstall": "npm run typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "sass": "sass --watch ./css/site.scss ./app/**/*.scss",
-    "start": "concurrent \"npm run tsc:w\" \"npm run sass\" \"npm run lite\" ",
-    "typings": "typings"
-  },
-  "dependencies": {
-    "angular2": "2.0.0-beta.7",
-    "systemjs": "0.19.20",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15",
-    "bootstrap": "3.3.6",
-    "jquery": "2.2.1",
-    "font-awesome": "4.5.0",
-    "ng2-pagination": "^0.0.1-beta.1"
-  },
-  "devDependencies": {
-    "concurrently": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-tslint": "^4.3.3",
-    "lite-server": "^2.1.0",
-    "tslint": "^3.5.0",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.8"
-  }
+    "name": "webcalconnectfrontend",
+    "version": "2.0.0",
+    "scripts": {
+        "postinstall": "npm run typings install",
+        "tsc": "tsc",
+        "tsc:w": "tsc -w",
+        "lite": "lite-server",
+        "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
+        "typings": "typings"
+    },
+    "dependencies": {
+        "angular2": "2.0.0-beta.7",
+        "systemjs": "0.19.20",
+        "es6-promise": "^3.0.2",
+        "es6-shim": "^0.33.3",
+        "reflect-metadata": "0.1.2",
+        "rxjs": "5.0.0-beta.2",
+        "zone.js": "0.5.15",
+        "bootstrap": "3.3.6",
+        "jquery": "2.2.1",
+        "font-awesome": "4.5.0"
+    },
+    "devDependencies": {
+        "concurrently": "^1.0.0",
+        "del": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.0",
+        "gulp-inject": "^3.0.0",
+        "gulp-load-plugins": "^1.2.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-sass": "^2.2.0",
+        "gulp-tslint": "^4.3.3",
+        "lite-server": "^2.1.0",
+        "tslint": "^3.5.0",
+        "typescript": "^1.7.5",
+        "typings": "^0.6.8"
+    }
 }
