--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
         "typings": "typings"
     },
     "dependencies": {
-        "angular2": "^2.0.0-beta.7",
-        "systemjs": "^0.19.20",
+        "angular2": "2.0.0-beta.7",
+        "systemjs": "0.19.20",
         "es6-promise": "^3.0.2",
         "es6-shim": "^0.33.3",
-        "reflect-metadata": "^0.1.2",
-        "rxjs": "^5.0.0-beta.2",
-        "zone.js": "^0.5.15",
-        "bootstrap": "^3.3.6",
-        "jquery": "^2.2.1",
-        "font-awesome": "^4.5.0",
-        "ng2-cookies": "^0.1.4"
+        "reflect-metadata": "0.1.2",
+        "rxjs": "5.0.0-beta.2",
+        "zone.js": "0.5.15",
+        "bootstrap": "3.3.6",
+        "jquery": "2.2.1",
+        "font-awesome": "4.5.0"
     },
     "devDependencies": {
         "concurrently": "^1.0.0",
