--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "tsc": "tsc",
         "tsc:w": "tsc -w",
         "lite": "lite-server",
-        "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
+        "gulp": "gulp",
+        "start": "concurrent \"npm run tsc:w\" \"npm run gulp -- watch\" \"npm run lite\" ",
         "typings": "typings"
     },
     "dependencies": {
