--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "angular2": "^2.0.0-beta.12",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
     "jquery": "^2.2.1",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.2",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
     "systemjs": "^0.19.20",
-    "zone.js": "^0.5.15"
+    "zone.js": "0.6.6"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
