--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
     "jquery": "^2.2.1",
+    "ng2-pagination": "0.0.1-beta.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "^0.19.20",
