--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "typings": "typings"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.12",
+    "angular2": "^2.0.0-beta.13",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
     "jquery": "^2.2.1",
-    "ng2-pagination": "0.0.1-beta.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "ng2-pagination": "^0.0.1-beta.3",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.2",
     "systemjs": "^0.19.20",
-    "zone.js": "0.6.6"
+    "zone.js": "^0.6.8"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
