--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
-    "gulp-inject": "^3.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.0.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-tslint": "^4.3.3",
+    "gulp-uglify": "^1.5.3",
     "lite-server": "^2.1.0",
     "tslint": "^3.5.0",
     "typescript": "^1.7.5",
