--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "typings": "typings"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.13",
+    "angular2": "2.0.0-beta.14",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
-    "es6-promise": "^3.0.2",
+    "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
-    "jquery": "^2.2.1",
-    "ng2-pagination": "^0.0.1-beta.3",
+    "jquery": "^2.2.3",
+    "ng2-pagination": "0.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "systemjs": "^0.19.20",
-    "zone.js": "^0.6.8"
+    "systemjs": "0.19.25",
+    "zone.js": "0.6.6"
   },
   "devDependencies": {
-    "concurrently": "^1.0.0",
+    "concurrently": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
@@ -35,9 +35,21 @@
     "gulp-sass": "^2.2.0",
     "gulp-tslint": "^4.3.3",
     "gulp-uglify": "^1.5.3",
-    "lite-server": "^2.1.0",
+    "lite-server": "^2.2.0",
     "tslint": "^3.5.0",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.8"
-  }
+    "typescript": "^1.8.9",
+    "typings": "^0.7.12"
+  },
+  "description": "WebcalConnect.com front end website written in Angular 2",
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jpreecedev/WebcalConnectFrontEnd.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jpreecedev/WebcalConnectFrontEnd/issues"
+  },
+  "homepage": "https://github.com/jpreecedev/WebcalConnectFrontEnd#readme"
 }
