--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^4.0.0",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
     "gulp-tslint": "^4.3.3",
     "gulp-uglify": "^1.5.3",
