--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.2.0",
     "gulp-inject": "^4.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-minify-css": "^1.2.4",
