--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-inject": "^4.0.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
+    "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^4.3.3",
     "gulp-uglify": "^1.5.3",
     "lite-server": "^2.2.0",
