--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^4.3.3",
+    "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "lite-server": "^2.2.0",
     "tslint": "^3.5.0",
