--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-flatten": "^0.2.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-inject": "^4.0.0",
+    "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
