--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.5.0",
+    "gulp-tslint": "^4.3.5",
     "jquery": "^2.2.3",
     "ng2-pagination": "0.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
+    "tslint": "^3.7.2",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
