--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
     "typings": "typings"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.14",
+    "angular2": "2.0.0-beta.15",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
-    "font-awesome": "^4.5.0",
+    "font-awesome": "^4.6.1",
+    "gulp-load-plugins": "^1.2.1",
     "gulp-tslint": "^4.3.5",
     "jquery": "^2.2.3",
     "ng2-pagination": "0.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
-    "tslint": "^3.7.2",
+    "tslint": "^3.7.4",
+    "typescript": "^1.8.10",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
