--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-htmlmin": "^1.3.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^4.0.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
@@ -46,6 +47,7 @@
     "gulp-tslint": "^4.3.3",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
+    "imagemin-pngquant": "^4.2.2",
     "lite-server": "^2.2.0",
     "tslint": "^3.5.0",
     "typescript": "^1.8.9",
