--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "webcalconnectfrontend",
   "version": "2.0.0",
   "scripts": {
-    "postinstall": "npm run typings install",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\"",
+    "docker-build": "docker build -t webcalconnectfrontend .",
+    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 webcalconnectfrontend",
+    "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "gulp": "gulp",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\"",
     "typings": "typings"
   },
   "dependencies": {
