--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.6.1",
-    "gulp-load-plugins": "^1.2.1",
-    "gulp-tslint": "^4.3.5",
     "jquery": "^2.2.3",
     "ng2-pagination": "0.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
-    "tslint": "^3.7.4",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.10"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
@@ -42,7 +39,7 @@
     "gulp-inject": "^4.0.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-minify-css": "^1.2.4",
+    "gulp-clean-css": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^4.3.3",
