--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "webcalconnectfrontend",
   "version": "2.0.0",
   "scripts": {
+    "test": "karma start karma.conf.js",
+    "prestart": "npm run test",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\"",
     "docker-build": "docker build -t webcalconnectfrontend .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 webcalconnectfrontend",
@@ -32,6 +34,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-htmlmin": "^1.3.0",
@@ -39,14 +42,19 @@
     "gulp-inject": "^4.0.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-clean-css": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^4.3.3",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "imagemin-pngquant": "^4.2.2",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
     "lite-server": "^2.2.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "tslint": "^3.5.0",
     "typescript": "^1.8.9",
     "typings": "^0.7.12"
