--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "2.0.0",
   "scripts": {
     "test": "concurrent \"npm run tsc:w\" \"karma start karma.conf.js\"",
+    "posttest": "node_modules/.bin/remap-istanbul -i coverage/report-json/coverage-final.json -o coverage -t html",
+    "coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "prestart": "npm run test",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\"",
     "docker-build": "docker build -t webcalconnectfrontend .",
@@ -48,13 +50,17 @@
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "imagemin-pngquant": "^4.2.2",
+    "istanbul": "0.4.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-coverage": "~0.5.5",
+    "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "remap-istanbul": "^0.6.3",
     "tslint": "^3.5.0",
     "typescript": "^1.8.9",
     "typings": "^0.7.12"
