--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webcalconnectfrontend",
   "version": "2.0.0",
   "scripts": {
-    "test": "concurrent \"npm run tsc:w\" \"karma start karma.conf.js\"",
+    "test": "karma start karma.conf.js",
     "posttest": "node_modules/.bin/remap-istanbul -i coverage/report-json/coverage-final.json -o coverage -t html",
     "coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "prestart": "npm run test",
