--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "font-awesome": "^4.6.1",
+    "gulp-clean-css": "^2.0.7",
+    "gulp-typescript": "^2.13.3",
     "jquery": "^2.2.3",
-    "ng2-pagination": "0.0.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "ng2-pagination": "^0.2.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
+    "tslint": "^3.9.0",
     "zone.js": "0.6.10"
   },
   "devDependencies": {
@@ -39,24 +45,24 @@
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-imagemin": "^2.4.0",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-imagemin": "^3.0.0",
     "gulp-inject": "^4.0.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
-    "gulp-tslint": "^4.3.3",
+    "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
-    "imagemin-pngquant": "^4.2.2",
+    "imagemin-pngquant": "^5.0.0",
     "istanbul": "0.4.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-coverage": "~0.5.5",
+    "karma-coverage": "~1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
