--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "angular2": "2.0.0-beta.17",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
+    "es6-promise": "^3.2.1",
+    "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.1",
     "gulp-clean-css": "^2.0.7",
     "gulp-typescript": "^2.13.3",
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "ng2-pagination": "^0.2.0",
     "reflect-metadata": "0.1.2",
+    "remap-istanbul": "^0.6.4",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.25",
     "tslint": "^3.9.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.1.0",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -42,29 +43,29 @@
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-htmlmin": "^2.0.0",
-    "gulp-imagemin": "^3.0.0",
-    "gulp-inject": "^4.0.0",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-inject": "^4.1.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^2.13.0",
+    "gulp-typescript": "^2.13.4",
     "gulp-uglify": "^1.5.3",
     "imagemin-pngquant": "^5.0.0",
     "istanbul": "0.4.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
+    "karma-coverage": "~1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-coverage": "~1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
     "remap-istanbul": "^0.6.3",
-    "tslint": "^3.5.0",
+    "tslint": "^3.10.2",
     "typescript": "^1.8.9",
-    "typings": "^0.7.12"
+    "typings": "^1.0.4"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
   "main": "main.js",
