--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "typings": "typings"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.17",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.2.1",
@@ -25,7 +33,7 @@
     "gulp-clean-css": "^2.0.7",
     "gulp-typescript": "^2.13.3",
     "jquery": "^2.2.4",
-    "ng2-pagination": "^0.2.0",
+    "ng2-pagination": "^0.3.0",
     "reflect-metadata": "0.1.2",
     "remap-istanbul": "^0.6.4",
     "rxjs": "5.0.0-beta.6",
