--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-typescript": "^2.13.3",
     "jquery": "^2.2.4",
     "ng2-pagination": "^0.3.0",
+    "pikaday": "^1.4.0",
     "reflect-metadata": "0.1.2",
     "remap-istanbul": "^0.6.4",
     "rxjs": "5.0.0-beta.6",
