--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-clean-css": "^2.0.7",
     "gulp-typescript": "^2.13.3",
     "jquery": "^2.2.4",
+    "moment": "^2.13.0",
     "ng2-pagination": "^0.3.0",
     "pikaday": "^1.4.0",
     "reflect-metadata": "0.1.2",
