Bundle Angular app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,14 @@
     "moduleResolution": "node",
     "removeComments": false,
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "outFile": "lib/app.js"
   },
   "exclude": [
     "node_modules",
-    "typings/main.d.ts",
-    "typings/main"
+    "node_modules/@angular",
+    "test",
+    "typings",
+    "wwwroot"
   ]
 }
