--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
