--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "lite-server": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
     "remap-istanbul": "^0.6.3",
+    "run-sequence": "^1.2.1",
     "tslint": "^3.10.2",
     "typescript": "^1.8.9",
     "typings": "^1.0.4"
