--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.1",
-    "gulp-clean-css": "^2.0.7",
-    "gulp-typescript": "^2.13.3",
+    "gulp-clean-css": "^2.0.9",
+    "gulp-inline-ng2-template": "^2.0.1",
+    "gulp-typescript": "^2.13.6",
     "jquery": "^2.2.4",
     "moment": "^2.13.0",
-    "ng2-pagination": "^0.3.0",
+    "ng2-pagination": "^0.3.1",
     "pikaday": "^1.4.0",
     "reflect-metadata": "0.1.2",
     "remap-istanbul": "^0.6.4",
