--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-inject": "^4.1.0",
     "gulp-inline-ng2-template": "^1.1.3",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-rev": "^7.0.0",
     "gulp-sass": "^2.2.0",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^5.0.0",
