--- a/package.json
+++ b/package.json
@@ -16,27 +16,26 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/common": "^2.0.0-rc.2",
+    "@angular/compiler": "^2.0.0-rc.2",
+    "@angular/core": "^2.0.0-rc.2",
+    "@angular/http": "^2.0.0-rc.2",
+    "@angular/platform-browser": "^2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.2",
+    "@angular/router-deprecated": "^2.0.0-rc.2",
     "bootbox": "^4.4.0",
     "bootstrap": "^3.3.6",
+    "core-js": "^2.4.0",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "font-awesome": "^4.6.1",
     "jquery": "^2.2.4",
     "moment": "^2.13.0",
-    "ng2-pagination": "^0.3.2",
+    "ng2-pagination": "^0.3.4",
     "pikaday": "^1.4.0",
     "reflect-metadata": "0.1.2",
-    "remap-istanbul": "^0.6.4",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.25",
-    "tslint": "^3.11.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
@@ -54,27 +53,18 @@
     "gulp-inject": "^4.1.0",
     "gulp-inline-ng2-template": "^2.0.4",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-rev": "^7.0.0",
-    "gulp-sass": "^2.2.0",
+    "gulp-rev": "^7.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-strip-comments": "^2.4.3",
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.13.4",
     "gulp-uglify": "^1.5.3",
     "imagemin-pngquant": "^5.0.0",
-    "istanbul": "0.4.3",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-coverage": "~1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.2.0",
-    "phantomjs-prebuilt": "^2.1.7",
-    "remap-istanbul": "^0.6.3",
     "run-sequence": "^1.2.1",
     "tslint": "^3.10.2",
     "typescript": "^1.8.9",
-    "typings": "^1.0.4"
+    "typings": "^1.3.0"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
   "main": "main.js",
