--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.3",
-    "@angular/compiler": "^2.0.0-rc.3",
-    "@angular/core": "^2.0.0-rc.3",
-    "@angular/forms": "^0.1.1",
-    "@angular/http": "^2.0.0-rc.3",
-    "@angular/platform-browser": "^2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
+    "@angular/common": "^2.0.0-rc.4",
+    "@angular/compiler": "^2.0.0-rc.4",
+    "@angular/core": "^2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "^2.0.0-rc.4",
+    "@angular/platform-browser": "^2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router-deprecated": "^2.0.0-rc.2",
     "angulartics2": "^1.1.1",
     "bootbox": "^4.4.0",
@@ -35,10 +35,10 @@
     "moment": "^2.13.0",
     "ng2-pagination": "^0.3.4",
     "pikaday": "^1.4.0",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.25",
-    "zone.js": "0.6.12"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "codelyzer": "0.0.23",
