--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "@types/es6-promise": "0.0.25-alpha",
     "codelyzer": "0.0.23",
     "concurrently": "^2.1.0",
     "event-stream": "^3.3.2",
