--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
+    "tether": "^1.3.2",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
@@ -51,6 +53,7 @@
     "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.2",
