--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "webcalconnectfrontend",
   "version": "2.0.0",
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --port 8080",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+    "clean": "rimraf node_modules doc dist && npm cache clean",
+    "clean-install": "npm run clean && npm install",
+    "clean-start": "npm run clean-install && npm start",
+    "watch": "webpack --watch --progress --profile",
+    "build": "rimraf dist && webpack --progress --profile --bail",
+    "server": "webpack-dev-server --inline --progress --port 8080",
+    "lint": "tslint --force \"src/**/*.ts\"",
+    "start": "npm run server",
+    "postinstall": "typings install"
   },
   "dependencies": {
     "@angular/common": "^2.0.0-rc.4",
@@ -37,35 +40,34 @@
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
-    "bootstrap-loader": "^1.0.10",
-    "css-loader": "^0.23.1",
+    "autoprefixer": "^6.3.2",
+    "codelyzer": "0.0.19",
+    "copy-webpack-plugin": "^3.0.0",
+    "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.8.4",
     "font-awesome-webpack": "0.0.4",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "node-sass": "^3.8.0",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
+    "html-loader": "^0.4.0",
+    "html-webpack-plugin": "^2.8.1",
+    "json-loader": "^0.5.3",
+    "node-sass": "^3.4.2",
+    "null-loader": "0.1.1",
+    "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.9.1",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
+    "raw-loader": "0.5.1",
+    "rimraf": "^2.5.1",
+    "sass-loader": "^3.1.2",
+    "shelljs": "^0.7.0",
+    "style-loader": "^0.13.0",
+    "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.1",
-    "typescript": "^1.8.10",
+    "tslint": "^3.4.0",
+    "tslint-loader": "^2.1.0",
+    "typescript": "^1.8.0",
     "typings": "^1.0.4",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
   "main": "main.js",
