--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
+    "bootstrap-loader": "^1.0.10",
     "codelyzer": "0.0.19",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.0",
@@ -55,6 +56,7 @@
     "phantomjs-prebuilt": "^2.1.4",
     "postcss-loader": "^0.9.1",
     "raw-loader": "0.5.1",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.1.2",
     "shelljs": "^0.7.0",
