--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "font-awesome": "^4.6.1",
     "jquery": "^2.2.4",
     "moment": "^2.13.0",
-    "ng2-pagination": "^0.3.4",
+    "ng2-pagination": "^0.3.5",
     "pikaday": "^1.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
-    "tether": "^1.3.2",
+    "tether": "^1.3.3",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
     "bootstrap-loader": "^1.0.10",
-    "codelyzer": "0.0.19",
+    "codelyzer": "^0.0.25",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
+    "file-loader": "^0.9.0",
     "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.0",
     "html-webpack-plugin": "^2.8.1",
@@ -58,7 +58,7 @@
     "raw-loader": "0.5.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.1",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "^4.0.0",
     "shelljs": "^0.7.0",
     "style-loader": "^0.13.0",
     "ts-helpers": "^1.1.1",
