--- a/package.json
+++ b/package.json
@@ -13,63 +13,63 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular/common": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/forms": "^0.2.0",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router-deprecated": "^2.0.0-rc.2",
     "bootbox": "^4.4.0",
-    "bootstrap": "^4.0.0-alpha.2",
-    "bootstrap-sass": "^3.3.6",
-    "core-js": "^2.4.0",
-    "es6-promise": "^3.2.1",
+    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap-sass": "^3.3.7",
+    "core-js": "^2.4.1",
+    "es6-promise": "^3.3.1",
     "es6-shim": "^0.35.1",
-    "font-awesome": "^4.6.1",
+    "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
-    "moment": "^2.13.0",
+    "moment": "^2.15.1",
     "ng2-pagination": "^0.3.5",
     "pikaday": "^1.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "tether": "^1.3.3",
-    "zone.js": "^0.6.12"
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.6",
+    "systemjs": "^0.19.27",
+    "tether": "^1.3.7",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
-    "autoprefixer": "^6.3.2",
-    "bootstrap-loader": "^1.0.10",
-    "codelyzer": "^0.0.25",
-    "copy-webpack-plugin": "^3.0.0",
-    "css-loader": "^0.23.0",
+    "autoprefixer": "^6.5.1",
+    "bootstrap-loader": "^1.2.1",
+    "codelyzer": "0.0.25",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "font-awesome-webpack": "0.0.4",
-    "html-loader": "^0.4.0",
-    "html-webpack-plugin": "^2.8.1",
-    "json-loader": "^0.5.3",
-    "node-sass": "^3.4.2",
-    "null-loader": "0.1.1",
-    "phantomjs-prebuilt": "^2.1.4",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.0",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.13",
     "postcss-loader": "^0.9.1",
-    "raw-loader": "0.5.1",
+    "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.0",
-    "rimraf": "^2.5.1",
-    "sass-loader": "^4.0.0",
-    "shelljs": "^0.7.0",
-    "style-loader": "^0.13.0",
-    "ts-helpers": "^1.1.1",
-    "ts-loader": "^0.8.1",
-    "tslint": "^3.4.0",
-    "tslint-loader": "^2.1.0",
-    "typescript": "^1.8.0",
-    "typings": "^1.0.4",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
+    "shelljs": "^0.7.4",
+    "style-loader": "^0.13.1",
+    "ts-helpers": "^1.1.2",
+    "ts-loader": "^0.8.2",
+    "tslint": "^3.15.1",
+    "tslint-loader": "^2.1.5",
+    "typescript": "^1.8.10",
+    "typings": "^1.4.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
   "main": "main.js",
