--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/http": "^2.1.1",
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/router-deprecated": "^2.0.0-rc.2",
+    "@angular/router": "^3.1.1",
     "bootbox": "^4.4.0",
     "bootstrap": "^4.0.0-alpha.5",
     "bootstrap-sass": "^3.3.7",
