--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "^2.1.1",
     "@angular/compiler": "^2.1.1",
     "@angular/core": "^2.1.1",
-    "@angular/forms": "^0.2.0",
+    "@angular/forms": "^2.1.1",
     "@angular/http": "^2.1.1",
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
@@ -30,18 +30,18 @@
     "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
     "moment": "^2.15.1",
-    "ng2-pagination": "^0.3.5",
+    "ng2-pagination": "^0.5.1",
     "pikaday": "^1.4.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.6",
-    "systemjs": "^0.19.27",
+    "rxjs": "^5.0.0-rc.1",
+    "systemjs": "^0.19.39",
     "tether": "^1.3.7",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.4.0",
+    "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.1",
-    "bootstrap-loader": "^1.2.1",
+    "bootstrap-loader": "^2.0.0-beta.12",
     "codelyzer": "0.0.25",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
@@ -51,10 +51,12 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
     "json-loader": "^0.5.4",
+    "less": "^2.3.1",
+    "less-loader": "^2.2.3",
     "node-sass": "^3.10.1",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.13",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
@@ -62,13 +64,13 @@
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^0.8.2",
+    "ts-loader": "^0.9.5",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^1.16.2"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
