--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "webpack-dev-server --inline --progress --port 8080",
     "lint": "tslint --force \"src/**/*.ts\"",
+    "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
     "start": "npm run server",
+    "start:hmr": "npm run server -- --hot",
     "postinstall": "typings install"
   },
   "dependencies": {
@@ -33,19 +34,22 @@
     "ng2-pagination": "^0.5.1",
     "pikaday": "^1.4.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "5.0.0-beta.12",
     "systemjs": "^0.19.39",
     "tether": "^1.3.7",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "@angularclass/hmr": "^1.2.1",
+    "@angularclass/hmr-loader": "^3.0.2",
     "angular2-template-loader": "^0.5.0",
     "autoprefixer": "^6.5.1",
+    "awesome-typescript-loader": "^2.2.4",
     "bootstrap-loader": "^2.0.0-beta.12",
     "codelyzer": "0.0.25",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.9.0",
     "font-awesome-webpack": "0.0.4",
     "html-loader": "^0.4.4",
@@ -71,7 +75,8 @@
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dashboard": "^0.1.8",
+    "webpack-dev-server": "^2.1.0-beta.9"
   },
   "description": "WebcalConnect.com front end website written in Angular 2",
   "main": "main.js",
