--- a/package.json
+++ b/package.json
@@ -1,93 +1,75 @@
 {
-  "name": "webcalconnectfrontend",
-  "version": "2.0.0",
+  "name": "app",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean-install && npm start",
     "watch": "webpack --watch --progress --profile",
     "build": "rimraf dist && webpack --progress --profile --bail",
-    "lint": "tslint --force \"src/**/*.ts\"",
     "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
-    "start": "npm run server",
-    "start:hmr": "npm run server -- --hot",
-    "postinstall": "typings install"
+    "lint": "tslint --force \"src/**/*.ts\"",
+    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
+    "start": "npm run server"
   },
   "dependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/router": "^3.1.1",
-    "bootbox": "^4.4.0",
+    "@angular/common": "2.3.0",
+    "@angular/compiler": "2.3.0",
+    "@angular/compiler-cli": "2.3.0",
+    "@angular/core": "2.3.0",
+    "@angular/forms": "2.3.0",
+    "@angular/http": "2.3.0",
+    "@angular/platform-browser": "2.3.0",
+    "@angular/platform-browser-dynamic": "2.3.0",
+    "@angular/platform-server": "2.3.0",
+    "@angular/router": "3.3.0",
     "bootstrap": "^4.0.0-alpha.5",
-    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
-    "es6-promise": "^3.3.1",
-    "es6-shim": "^0.35.1",
-    "font-awesome": "^4.6.3",
-    "jquery": "^2.2.4",
-    "moment": "^2.15.1",
-    "ng2-pagination": "^0.5.1",
-    "pikaday": "^1.4.0",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "^0.19.39",
-    "tether": "^1.3.7",
-    "zone.js": "^0.6.26"
+    "font-awesome": "^4.7.0",
+    "moment": "^2.17.1",
+    "ng2-pagination": "^1.0.1",
+    "pikaday": "^1.5.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-rc.4",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angularclass/hmr": "^1.2.1",
-    "@angularclass/hmr-loader": "^3.0.2",
-    "angular2-template-loader": "^0.5.0",
-    "autoprefixer": "^6.5.1",
+    "@types/core-js": "^0.9.0",
+    "@types/node": "^6.0.38",
+    "@types/selenium-webdriver": "2.53.33",
+    "angular2-template-loader": "^0.6.0",
+    "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^2.2.4",
-    "bootstrap-loader": "^2.0.0-beta.12",
-    "codelyzer": "0.0.25",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "codelyzer": "1.0.0-beta.3",
+    "copy-webpack-plugin": "^4.0.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "font-awesome-webpack": "0.0.4",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.3.1",
+    "html-loader": "^0.4.0",
+    "html-webpack-plugin": "^2.8.1",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "json-loader": "^0.5.3",
+    "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "node-sass": "^3.10.1",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.13",
-    "postcss-loader": "^1.0.0",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.2",
-    "shelljs": "^0.7.4",
-    "style-loader": "^0.13.1",
-    "ts-helpers": "^1.1.2",
-    "ts-loader": "^0.9.5",
-    "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0",
-    "url-loader": "^0.5.7",
+    "node-sass": "^3.4.2",
+    "null-loader": "0.1.1",
+    "postcss-loader": "^1.1.0",
+    "protractor": "^4.0.10",
+    "raw-loader": "0.5.1",
+    "rimraf": "^2.5.1",
+    "sass-loader": "^4.0.0",
+    "shelljs": "^0.7.0",
+    "style-loader": "^0.13.0",
+    "ts-helpers": "^1.1.1",
+    "tslint": "^3.4.0",
+    "tslint-loader": "^2.1.0",
+    "typedoc": "^0.5.1",
+    "typescript": "2.0.10",
+    "url-loader": "^0.5.6",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^2.1.0-beta.9"
-  },
-  "description": "WebcalConnect.com front end website written in Angular 2",
-  "main": "main.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jpreecedev/WebcalConnectFrontEnd.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jpreecedev/WebcalConnectFrontEnd/issues"
-  },
-  "homepage": "https://github.com/jpreecedev/WebcalConnectFrontEnd#readme"
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-server": "2.1.0-beta.9"
+  }
 }
